--- a/bakery-frontend/public/index.html
+++ b/bakery-frontend/public/index.html
@@ -17,7 +17,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Frost & Crinkle - Your premium online bakery for fresh cakes, pastries, breads, and custom orders. Order delicious baked goods delivered to your doorstep." />
+    <meta name="description" content="Frost & Crinkle" />
     <meta name="keywords" content="bakery, cakes, pastries, bread, online bakery, custom cakes, fresh baked goods, Frost and Crinkle" />
     <meta name="author" content="Frost & Crinkle Bakery" />
     <meta name="robots" content="index, follow" />
@@ -25,7 +25,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://frostandcrinkle.com/" />
-    <meta property="og:title" content="Frost & Crinkle - Premium Online Bakery" />
+    <meta property="og:title" content="Frost & Crinkle" />
     <meta property="og:description" content="Order fresh cakes, pastries, and breads online. Custom orders available. Delivered fresh to your doorstep." />
     <meta property="og:image" content="%PUBLIC_URL%/LOGOO.png" />
     <meta property="og:site_name" content="Frost & Crinkle Bakery" />
@@ -33,7 +33,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://frostandcrinkle.com/" />
-    <meta name="twitter:title" content="Frost & Crinkle - Premium Online Bakery" />
+    <meta name="twitter:title" content="Frost & Crinkle" />
     <meta name="twitter:description" content="Order fresh cakes, pastries, and breads online. Custom orders available." />
     <meta name="twitter:image" content="%PUBLIC_URL%/LOGOO.png" />
     
